# rtop

./: Cargo.toml  LICENSE  NOTICE  README.md  build.rs
.github/workflows/: release.yml
src/: main.rs
src/gui/: footer.rs  help.rs  input_overlay.rs  mod.rs  overlay.rs  processes.rs  stats.rs
src/helpers/: build_node.rs  cpu.rs  keyboard.rs  kill_process.rs  manage_process.rs  memory.rs  mod.rs  mouse.rs  network.rs  process_files.rs  process_tree.rs  refresh.rs  saving.rs  sorting.rs  ui.rs  utils.rs
