[package]
name = "rtop"
version = "0.1.0"
edition = "2024"
description = "An htop like TUI built with rust ratatui"
license = "Apache-2.0"
repository = "https://github.com/Lucop1911/rtop"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.29.0"
sysinfo = "0.37.2"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0.0"
libc = "0.2"
procfs = "0.18.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_Foundation"
] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
overflow-checks = false

[package.metadata.bundle]
name = "rtop"
identifier = "com.luca.rtop"
version = "1.0.0"
copyright = "Copyright (c) 2025"
category = "Utility"
short_description = "rtop"
long_description = "An htop like TUI built with rust ratatui"